--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -11,7 +11,7 @@
     <label for="exampleFormControlTextarea1">Post</label>
     <textarea class="form-control" name="postBody" id="exampleFormControlTextarea1" rows="5"></textarea>
   </div>
-  <button type="submit" name="button" class="btn btn-primary">Publish</button>
+  <button type="submit" name="button" class="btn btn-primary entry">Publish</button>
 </form>
 
 
